--- a/personal-site/src/styles.scss
+++ b/personal-site/src/styles.scss
@@ -2,3 +2,13 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+.content-tile .mat-figure {
+    padding: 20px 50px 20px 0px !important;
+}
+
+.mat-dialog-container {
+    background-color: white !important;
+}
