added card background to gallery; added about information; finished skills grid;

--- a/personal-site/src/app/app.component.html
+++ b/personal-site/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar class="toolbar">
   <h4>Joshua Shields</h4>
   <button [ngClass]="{ 'selected': currentRoute === '/' || currentRoute === '/about' }" routerLink="about" mat-button class="selection">
     <mat-icon>person</mat-icon>
