--- a/personal-site/src/app/gallery/gallery.component.html
+++ b/personal-site/src/app/gallery/gallery.component.html
@@ -1,17 +1,19 @@
-<div class="gallery">
-    <img (click)="popout()" *ngIf="currentImage" [src]="currentImage.path" [width]="currentImage.width" [height]="currentImage.height" />
-    <div class="gallery-controls" [style.width.px]="currentImage.width">
-        <button mat-button class="button" (click)="changeImage(-1)" [disabled]="isFirstImage">
-            <mat-icon>chevron_left</mat-icon>
-        </button>
-        <mat-chip-list>
-            <mat-chip 
-                *ngFor="let i of images" [ngClass]="{ 'chip': true, 'selected-chip': i.id === currentImage.id }"
-                (click)="selectImage(i)"    
-            ></mat-chip>
-        </mat-chip-list>
-        <button mat-button class="button" (click)="changeImage(1)" [disabled]="isLastImage">
-            <mat-icon>chevron_right</mat-icon>
-        </button>
+<mat-card class="gallery-card">
+    <div class="gallery">
+        <img (click)="popout()" *ngIf="currentImage" [src]="currentImage.path" [width]="currentImage.width" [height]="currentImage.height" />
+        <div class="gallery-controls" [style.width.px]="currentImage.width">
+            <button mat-button class="button" (click)="changeImage(-1)" [disabled]="isFirstImage">
+                <mat-icon>chevron_left</mat-icon>
+            </button>
+            <mat-chip-list>
+                <mat-chip 
+                    *ngFor="let i of images" [ngClass]="{ 'chip': true, 'selected-chip': i.id === currentImage.id }"
+                    (click)="selectImage(i)"    
+                ></mat-chip>
+            </mat-chip-list>
+            <button mat-button class="button" (click)="changeImage(1)" [disabled]="isLastImage">
+                <mat-icon>chevron_right</mat-icon>
+            </button>
+        </div>
     </div>
-</div>
+</mat-card>
