--- a/personal-site/src/app/gallery/gallery.component.scss
+++ b/personal-site/src/app/gallery/gallery.component.scss
@@ -23,6 +23,10 @@ button:hover:enabled mat-icon {
     margin: 10px;
 }
 
+.gallery-card {
+    background-color: white;
+}
+
 .gallery-controls {
     display: flex;
     justify-content: space-between;
