--- a/personal-site/src/app/projects/projects.component.html
+++ b/personal-site/src/app/projects/projects.component.html
@@ -5,14 +5,14 @@
                 <app-gallery [images]="images" (imageChanged)="handleImageChange($event)"></app-gallery>
             </mat-grid-tile>
             <mat-grid-tile class="content-tile">
-                <div class="info">
+                <mat-card class="info">
                     <h1>Project Name</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Veniam ex voluptas laborum nemo quasi, saepe asperiores recusandae expedita veritatis omnis
                         fugiat perferendis non ducimus autem facilis quas,
                         natus magni accusantium!
                     </p>
-                </div>
+                </mat-card>
             </mat-grid-tile>
         </mat-grid-list>
     </div>
