--- a/personal-site/src/app/about/about.component.html
+++ b/personal-site/src/app/about/about.component.html
@@ -1,3 +1,36 @@
-<p>
-    <strong>Put text here</strong>
-</p>
+<div class="about">
+    <mat-card>
+        <p>
+            <strong>Josh Shields</strong> is currently a lead application developer at Global Data Consultants, LLC (GDC) in Mechanicsburg, Pennsylvania.
+            <br>
+            <br>
+            <span>
+                Josh graduated in May 2016 from California University of Pennsylvania with a B.S of Computer Science, and has worked at GDC since his graduation over four years ago.
+            </span>
+            <br>
+            <br>
+            <span>
+                In his career thus far, Josh has learned a variety of new languages and frameworks and has grown to be a proficient full-stack developer.
+            </span>
+            <br>
+            <br>
+            <span>
+                Within the first year of employment, Josh had earned his MCSA certification and after another half-year finished the certification path and earned his MCSD.
+            </span>
+            <br>
+            <span>
+                Josh achieved this at a faster rate than his other coworkers who started at the same time as him.
+            </span>
+            <br>
+            <br>
+            <span>
+                After about two years of employment, Josh began the "consulting" aspect of the position and started being contracted out to other companies as either an individual developer, or as part of a team formed at GDC in which he served as the lead developer.
+            </span>
+            <br>
+            <br>
+            <span>
+                Whether working on contract or on internal projects, <strong>Josh strives to deliver his absolute best</strong>.
+            </span>
+        </p>
+    </mat-card>
+</div>
