--- a/personal-site/src/app/projects/projects.component.scss
+++ b/personal-site/src/app/projects/projects.component.scss
@@ -7,8 +7,8 @@
         margin-bottom: 0;
     }
 
-    white-space: break-spaces;
     background-color: #E1EDF7;
     padding: 25px;
+    border: 2px solid #5B9BD5;
     margin-top: -75px;
 }
