--- a/personal-site/src/app/skills/skills.component.html
+++ b/personal-site/src/app/skills/skills.component.html
@@ -1,21 +1,40 @@
 <div class="skills">
-    <table mat-table [dataSource]="skills">
-        <ng-container matColumnDef="name">
-            <td mat-cell *matCellDef="let element">
-                <strong>{{ element.name }}</strong>
-            </td>
-        </ng-container>
-        <ng-container matColumnDef="years">
-            <td mat-cell *matCellDef="let element">
-                {{ element.years }}
-            </td>
-        </ng-container>
-        <ng-container matColumnDef="description">
-            <td mat-cell *matCellDef="let element">
-                {{ element.description }}
-            </td>
-        </ng-container>
-        
-        <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-    </table>
+    <div class="table-group">
+        <h1 class="table-header">
+            Technical Skills
+        </h1>
+        <table mat-table [dataSource]="skills">
+            <ng-container matColumnDef="name">
+                <td mat-cell *matCellDef="let element">
+                    <strong>{{ element.name }}</strong>
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="years">
+                <td class="middle-cell" mat-cell *matCellDef="let element">
+                    {{ element.years }} years
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="description">
+                <td mat-cell *matCellDef="let element">
+                    {{ element.description }}
+                </td>
+            </ng-container>
+            
+            <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+        </table>
+    </div>    
+    <div class="table-group">
+        <h1 class="table-header">
+            Other Noteworthy Skills
+        </h1>
+        <table mat-table [dataSource]="otherSkills">
+            <ng-container matColumnDef="skill">
+                <td mat-cell *matCellDef="let element">
+                    {{ element }}
+                </td>
+            </ng-container>
+            
+            <tr mat-row *matRowDef="let row; columns: otherColumns;"></tr>
+        </table>
+    </div>
 </div>
