--- a/personal-site/src/app/about/about.component.html
+++ b/personal-site/src/app/about/about.component.html
@@ -1,11 +1,14 @@
 <div class="about">
     <mat-card>
+        <h1 class="header">
+            About
+        </h1>
         <p>
             <strong>Josh Shields</strong> is currently a lead application developer at Global Data Consultants, LLC (GDC) in Mechanicsburg, Pennsylvania.
             <br>
             <br>
             <span>
-                Josh graduated in May 2016 from California University of Pennsylvania with a B.S of Computer Science, and has worked at GDC since his graduation over four years ago.
+                Josh graduated in May 2016 from California University of Pennsylvania with a B.S. of Computer Science, and has worked at GDC since his graduation over four years ago.
             </span>
             <br>
             <br>
@@ -32,5 +35,10 @@
                 Whether working on contract or on internal projects, <strong>Josh strives to deliver his absolute best</strong>.
             </span>
         </p>
+        <p>
+            To view some of Josh's personal projects, please click the "Projects" link in the toolbar above, 
+            or click <a routerLink="/projects">here</a>
+        </p>
     </mat-card>
+    <app-skills></app-skills>
 </div>
