--- a/personal-site/src/styles.scss
+++ b/personal-site/src/styles.scss
@@ -28,3 +28,7 @@ mat-card.info {
     color: black !important;
     padding: 0px 35px;
 }
+
+.popout-gallery .mat-dialog-container {
+    padding: 0 0 10px 0 !important;
+}
