--- a/personal-site/src/app/about/about.component.scss
+++ b/personal-site/src/app/about/about.component.scss
@@ -1,3 +1,20 @@
-.about {
-    padding: 50px 100px;
+mat-card {
+    border: 2px solid #5B9BD5;
+    background-color: white;
+    color: #333;
+    margin: 50px auto 25px auto;
+    width: 75%;
+    padding: 0px;
+
+    p {
+        padding: 0 10px 10px 10px;
+    }
+}
+
+.header {
+    background-color: #5b98d5;
+    margin: 0;
+    padding: 0.5em;
+    text-align: center;
+    color: white;
 }
