--- a/personal-site/src/app/app.component.scss
+++ b/personal-site/src/app/app.component.scss
@@ -3,12 +3,23 @@ button {
 }
 
 h4 {
-    margin-right: 50px;
+    margin-bottom: -5px;
+}
+
+h6 {
+    font-size: 14px;
+    font-style: italic;
 }
 
 .selected {
     background-color: white;
     color: black;
+}
+
+.title {
+    text-align: center;
+    margin-top: 0px;
+    margin-right: 50px;
 }
 
 .toolbar {
