--- a/personal-site/src/app/gallery/gallery.component.scss
+++ b/personal-site/src/app/gallery/gallery.component.scss
@@ -21,6 +21,11 @@ button:hover:enabled mat-icon {
     color: #E1EDF7 !important;
 }
 
+.gallery {
+    text-align: center;
+    margin: 50px 0px;
+}
+
 .gallery-card {
     background-color: #e1edf7;
     border: 2px solid #5b9bd5;
@@ -32,6 +37,12 @@ button:hover:enabled mat-icon {
     justify-content: space-between;
     align-items: center;
     padding-top: 10px;
+}
+
+img {
+    width: 90%;
+    max-height: 400px;
+    filter: blur(6px);
 }
 
 img:hover {
