--- a/personal-site/src/app/projects/project/project.component.scss
+++ b/personal-site/src/app/projects/project/project.component.scss
@@ -1,17 +1,59 @@
 .controls {
-    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .info {
-    h1 {
-        margin-top: 0;
+    .controls {
+        padding: 0px 10px 10px 10px;
     }
 
-    background-color: #e1edf7;
-    padding: 25px;
+    .details {
+        text-align: center;
+
+        h6 {
+            margin: 0;
+        }
+    }
+
+    .langs {
+        display: flex;
+        justify-content: center;
+        padding: 15px 0px;
+    }
+
+    h1 {
+        margin: 0;
+        text-align: center;
+        background-color: #5b9bd5;
+        color: white;
+        padding: 15px;
+    }
+
+    p {
+        margin: 0px;
+        padding: 15px;
+        font-style: italic;
+        border-bottom: 2px solid #5b9bd5;
+        background-color: #e1edf7;
+        color: #5b9bd5;
+        font-weight: bold;
+    }
+
+    background-color: white;
+    padding: 0px;
     border: 2px solid #5b9bd5;
-    margin-top: -75px;
-    max-width: 500px;
+    z-index: 999;
+    margin-bottom: 20px;
+}
+
+.controls div:not(:last-child) {
+    margin-right: 50px !important;
+}
+
+.full-width {
+    max-width: 1500px !important;
+    margin: 25px auto !important;
 }
 
 .left {
@@ -22,4 +64,59 @@
 .right {
     position: absolute;
     left: 40px;
+}
+
+mat-chip {
+    background-color: #333 !important;
+}
+
+mat-chip:hover::after {
+    opacity: 0 !important;
+}
+
+.project-main {
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 50px 0px;
+}
+
+.project {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.project::after {
+    filter: blur(8px);
+}
+
+.background-image {
+    position: absolute;
+    z-index: 1;
+    display: block;
+    width: 90%;
+    height: 400px;
+    -webkit-filter: blur(8px);
+    -moz-filter: blur(8px);
+    -o-filter: blur(8px);
+    -ms-filter: blur(8px);
+    filter: blur(8px);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.icon {
+    font-size: 32px;
+    color: #333;
+}
+
+h3 {
+    color: black;
+    margin: 0 0 0 15px;
 }
