--- a/personal-site/src/app/projects/trello-button/trello-button.component.scss
+++ b/personal-site/src/app/projects/trello-button/trello-button.component.scss
@@ -1,7 +1,6 @@
 button {
     border: 2px solid #333;
-    background-color: #E1EDF7;
-    margin: 0 20px 20px 0;
+    background-color: white;
 }
 
 button:hover {
