--- a/personal-site/src/app/app.component.html
+++ b/personal-site/src/app/app.component.html
@@ -1,19 +1,24 @@
-<mat-toolbar class="toolbar">
-  <div class="title">
-    <h4>Joshua Shields</h4>
-    <h6>Lead Application Developer</h6>
-  </div>
-  <button [ngClass]="{ 'selected': currentRoute === '/' || currentRoute === '/about' }" routerLink="about" mat-button class="selection">
-    <mat-icon>person</mat-icon>
-    About
-  </button>
-  <!-- <button [ngClass]="{ 'selected': currentRoute === '/skills' }" routerLink="skills" mat-button class="selection">
-    <mat-icon>notes</mat-icon>
-    Skills
-  </button> -->
-  <button [ngClass]="{ 'selected': currentRoute === '/projects' }" routerLink="projects" mat-button class="selection">
-    <mat-icon>code</mat-icon>
-    Projects
-  </button>
-</mat-toolbar>
-<router-outlet></router-outlet>
+<div (window:resize)="onResize($event)">
+  <mat-toolbar class="toolbar" [ngStyle]="{ 'justifyContent': isMobile ? 'space-between' : 'normal' }">
+    <div class="title">
+      <h4>Joshua Shields</h4>
+      <h6>Lead Application Developer</h6>
+    </div>
+    <button *ngIf="!isMobile" [ngClass]="{ 'selected': currentRoute === '/' || currentRoute === '/about' }" routerLink="about" mat-button class="selection">
+      <mat-icon>person</mat-icon>
+      About
+    </button>
+    <!-- <button [ngClass]="{ 'selected': currentRoute === '/skills' }" routerLink="skills" mat-button class="selection">
+      <mat-icon>notes</mat-icon>
+      Skills
+    </button> -->
+    <button *ngIf="!isMobile" [ngClass]="{ 'selected': currentRoute === '/projects' }" routerLink="projects" mat-button class="selection">
+      <mat-icon>code</mat-icon>
+      Projects
+    </button>
+    <button mat-icon-button *ngIf="isMobile">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </mat-toolbar>
+  <router-outlet></router-outlet>
+</div>
