--- a/personal-site/src/app/projects/project/project-control/project-control.component.scss
+++ b/personal-site/src/app/projects/project/project-control/project-control.component.scss
@@ -15,7 +15,9 @@
     }
 }
 
-.control:hover {
+
+.control:hover,
+.mobile-control {
     background-color: #333 !important;
     cursor: pointer;
 
