--- a/personal-site/src/app/projects/projects.component.html
+++ b/personal-site/src/app/projects/projects.component.html
@@ -1,6 +1,7 @@
 <div class="projects">
     <app-project
         *ngFor="let project of projects"
+        [isMobile]="isMobile"
         [project]="project"
     ></app-project>
 </div>
