--- a/personal-site/src/app/skills/skills.component.html
+++ b/personal-site/src/app/skills/skills.component.html
@@ -14,7 +14,7 @@
                     {{ element.years }} years
                 </td>
             </ng-container>
-            <ng-container matColumnDef="description">
+            <ng-container *ngIf="!isMobile" matColumnDef="description">
                 <td mat-cell *matCellDef="let element">
                     {{ element.description }}
                 </td>
