--- a/personal-site/src/app/app.component.html
+++ b/personal-site/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div (window:resize)="onResize($event)">
+<div>
   <mat-toolbar class="toolbar" [ngStyle]="{ 'justifyContent': isMobile ? 'space-between' : 'normal' }">
     <div class="title">
       <h4>Joshua Shields</h4>
