--- a/personal-site/src/app/projects/project/project.component.html
+++ b/personal-site/src/app/projects/project/project.component.html
@@ -10,9 +10,9 @@
                 </mat-chip>
             </mat-chip-list>
         </div>
-        <div class="details">
+        <!-- <div class="details">
             <h6>{{ details }}</h6>
-        </div>
+        </div> -->
     </mat-card>
     <div class="controls">
         <div [ngClass]="{ 'control-wrapper': !isMobile, 'mobile-control-wrapper': isMobile }" *ngIf="project.images.length > 0">
