--- a/personal-site/src/app/about/about.component.scss
+++ b/personal-site/src/app/about/about.component.scss
@@ -1,3 +1,9 @@
+.about {
+    padding: 15px;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
 mat-card {
     border: 2px solid #5B9BD5;
     background-color: white;
@@ -17,4 +23,10 @@ mat-card {
     padding: 0.5em;
     text-align: center;
     color: white;
+    margin-bottom: 35px !important;
+}
+
+.header-title {
+    font-size: 24pt;
+    font-weight: bold;
 }
