--- a/personal-site/src/app/app.component.scss
+++ b/personal-site/src/app/app.component.scss
@@ -11,6 +11,12 @@ h6 {
     font-style: italic;
 }
 
+.footer {
+    justify-content: center;
+    background-color: #eee;
+    color: #333;
+}
+
 .selected {
     background-color: white;
     color: black;
