--- a/personal-site/src/styles.scss
+++ b/personal-site/src/styles.scss
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+// Core CSS file
+@import 'photoswipe/dist/photoswipe.css';
+// Skin CSS file (styling of UI - buttons, caption, etc.)
+//      In the folder of skin CSS file there are also:
+//      - .png and .svg icons sprite, 
+//      - preloader.gif (for browsers that do not support CSS animations)
+@import 'photoswipe/dist/default-skin/default-skin.css';
 
 html, body { height: 100%; }
 body { 
@@ -31,4 +38,18 @@ mat-card.info {
 
 .popout-gallery .mat-dialog-container {
     padding: 0 0 10px 0 !important;
+}
+
+.header .mat-expansion-panel-content .mat-expansion-panel-body {
+    background-color: white;
+    color: #333;
+    border-radius: 10px;
+}
+
+.table-panel .mat-expansion-panel-content .mat-expansion-panel-body {
+    padding: 0 !important;
+}
+
+.mat-expansion-panel:not(.mat-expanded):not([aria-disabled=true]) .mat-expansion-panel-header:hover {
+    background-color: #589bd5 !important;
 }
