--- a/personal-site/src/app/gallery/gallery.component.html
+++ b/personal-site/src/app/gallery/gallery.component.html
@@ -1,7 +1,7 @@
-<!-- <mat-card class="gallery-card"> -->
+<!-- <mat-card class="gallery-card">
     <div class="gallery" *ngIf="images">
         <img (click)="popout()" *ngIf="currentImage" [src]="currentImage.path" />
-        <!-- <div class="gallery-controls" [style.width.px]="currentImage.width">
+        <div class="gallery-controls" [style.width.px]="currentImage.width">
             <button mat-button class="button" (click)="changeImage(-1)" [disabled]="isFirstImage">
                 <mat-icon>chevron_left</mat-icon>
             </button>
@@ -14,6 +14,6 @@
             <button mat-button class="button" (click)="changeImage(1)" [disabled]="isLastImage">
                 <mat-icon>chevron_right</mat-icon>
             </button>
-        </div> -->
+        </div>
     </div>
-<!-- </mat-card> -->
+</mat-card> -->
