--- a/personal-site/src/app/gallery/popout-gallery/popout-gallery.component.html
+++ b/personal-site/src/app/gallery/popout-gallery/popout-gallery.component.html
@@ -1,4 +1,4 @@
-<div class="gallery">
+<!-- <div class="gallery">
     <img *ngIf="currentImage" [src]="currentImage.path" />
     <div class="popout-gallery-controls">
         <button mat-button class="button" (click)="changeImage(-1)" [disabled]="isFirstImage">
@@ -14,4 +14,4 @@
             <mat-icon>chevron_right</mat-icon>
         </button>
     </div>
-</div>
+</div> -->
