--- a/personal-site/src/app/skills/skills.component.scss
+++ b/personal-site/src/app/skills/skills.component.scss
@@ -46,3 +46,9 @@ table {
     font-style: italic;
   }
 }
+
+@media only screen and (max-width: 425px) {
+  .header-title {
+      font-size: 14pt !important;
+  }
+}
